# wotr-community-website

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  README.md
backend/: .gitignore  .hlint.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cabal.project  database.sqlite  wotr-community-website.cabal
backend/.zed/: settings.json
backend/app/: GenTypes.hs  Main.hs  Migration.hs  Server.hs
backend/database/: database.sqlite
backend/scripts/: init_db.sh
backend/src/: Api.hs  App.hs  AppConfig.hs  AppServer.hs  Auth.hs  Database.hs  Logging.hs  Validation.hs  main.rs  types.rs
backend/src/Migration/: Actions.hs  Database.hs  Types.hs
backend/src/Types/: Api.hs  App.hs  Auth.hs  DataField.hs  Database.hs  Migration.hs  TypeScriptInstances.hs
backend/test/: Test.hs
frontend/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js  xo.config.ts
frontend/public/: index.html
frontend/src/: AdminFormLayout.tsx  App.tsx  Autocomplete.tsx  ButtonSelector.tsx  ErrorDisplay.tsx  ExternalLink.tsx  FileUpload.tsx  Filters.tsx  FormElement.tsx  FreeCaptures.tsx  GameReportForm.tsx  GameReportFormElement.tsx  GameReportSettings.tsx  GameReports.tsx  GoogleLogin.tsx  LeaguePlayerForm.tsx  Leagues.tsx  MultiOptionInput.tsx  Pagination.tsx  PlayerEditForm.tsx  PlayerRemapForm.tsx  Rankings.tsx  ReportDeleteForm.tsx  SelectNumericOptionInput.tsx  SelectOptionInput.tsx  SettlementBadge.tsx  ShadowCaptures.tsx  SingleOptionInput.tsx  SupportLink.tsx  Table.tsx  TableFilter.tsx  TableLayout.tsx  TableView.tsx  ToolsMenu.tsx  VictoryPoints.tsx  constants.ts  index.css  index.tsx  initialGameReportFormData.tsx  networkErrorHandlers.ts  (+2 more)
frontend/src/GameReportForm/: getInitialFormData.tsx  index.tsx  initialFormData.tsx
frontend/src/Table/: AutocompleteFilter.tsx  BooleanFilter.tsx  FilterBar.tsx  InequalityFilter.tsx  ResetButton.tsx  TableFilter.tsx  constants.tsx  index.tsx  sumPriorWidths.tsx  types.tsx
frontend/src/components/: AdminFormLayout.tsx  App.tsx  Autocomplete.tsx  ButtonSelector.tsx  ErrorDisplay.tsx  FileUpload.tsx  Filters.tsx  FormElement.tsx  FreeCaptures.tsx  GameReportSettings.tsx  GameReports.tsx  GoogleLogin.tsx  HelpIcon.tsx  LeaguePlayerForm.tsx  Leagues.tsx  LoadingOverlay.tsx  Modal.tsx  MultiOptionInput.tsx  Pagination.tsx  PlayerEditForm.tsx  PlayerRemapForm.tsx  Rankings.tsx  ReportDeleteForm.tsx  SelectNumericOptionInput.tsx  SelectOptionInput.tsx  ShadowCaptures.tsx  SingleOptionInput.tsx  TableLayout.tsx  TextInput.tsx  ToolsMenu.tsx  VictoryPoints.tsx
frontend/src/components/GameReportForm/: FileUpload.tsx  VictoryPoints.tsx  getInitialFormData.tsx  index.tsx  styledComponents.tsx
frontend/src/components/GameReports/: FreeCaptures.tsx  ReportDeleteForm.tsx  Settings.tsx  ShadowCaptures.tsx  colHeaders.tsx  constants.ts  formatters.tsx  index.tsx  rows.tsx  serializers.ts  types.ts  validators.ts
frontend/src/components/Leagues/: PlayerForm.tsx  index.tsx  styledComponents.tsx
frontend/src/components/Rankings/: PlayerEditForm.tsx  PlayerRemapForm.tsx  index.tsx
frontend/src/components/Table/: AutocompleteFilter.tsx  BooleanFilter.tsx  FilterBar.tsx  InequalityFilter.tsx  NullableInequalityFilter.tsx  TimestampFilter.tsx  index.tsx  styledComponents.tsx  sumPriorWidths.tsx  types.tsx
frontend/src/env/: dev.ts  env.d.ts  index.ts  prod.ts  types.ts
frontend/src/hooks/: useConditionalActionEffect.tsx  useFormData.tsx  useGameReportFormEffects.tsx  useMediaQuery.tsx  useRequestState.tsx
frontend/src/hooks/useFormData/: index.tsx  initialFormData.tsx
frontend/src/styles/: breakpoints.ts  colors.ts  index.css  sizes.ts  styledComponents.tsx
infrastructure/: README.md  cdk.json  package-lock.json  package.json
infrastructure/lib/: infrastructure-stack.ts
scripts/gamelog-migration/: migration.py  pyproject.toml
