[package]
edition = "2021"
name = "war-of-the-ring-community"
version = "0.1.0"

[dependencies]
axum = "0.7.5"
rusqlite = "0.32.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
