cabal-version:      3.4
name:               wotr-community-website
version:            0.1.0.0
homepage:           https://waroftheringcommunity.net
license:            MIT
license-file:       LICENSE
author:             Bradley Sherman
maintainer:         sirrus233@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common extensions
    ghc-options: -threaded

    default-extensions:
        DuplicateRecordFields,
        OverloadedRecordDot,
        OverloadedStrings,
        RecordWildCards

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude

common dependencies
    build-depends:
        base            ^>=4.20.0.0,
        relude          ^>=1.2.2.0,
        filepath        ^>=1.5.4.0,
        directory       ^>=1.3.9.0,
        time            ^>=1.12.2,
        aeson           ^>=2.2.3.0,
        servant         ^>=0.20.2,
        servant-server  ^>=0.20.2,
        warp            ^>=3.4.7,
        resource-pool   ^>=0.4.0.0,
        sqlite-simple   ^>=0.4.19.0,
        fast-logger     ^>=3.2.5,
        hedis           ^>=0.15.2,
        validation      ^>=1.1.3,
        wai-cors        ^>=0.2.7,

library
    import:           warnings,
                      extensions,
                      dependencies
    exposed-modules:  Api,
                      AppServer,
                      Database,
                      Types.Api,
                      Types.App,
                      Types.Database,
                      Types.DataField,
                      Validation
    hs-source-dirs:   src
    default-language: GHC2024

executable wotr-community-website
    import:           warnings,
                      extensions,
                      dependencies
    main-is:          Main.hs
    build-depends:    wotr-community-website
    hs-source-dirs:   app
    default-language: GHC2024

test-suite wotr-community-website-test
    import:           warnings,
                      extensions,
                      dependencies
    main-is:          Main.hs
    build-depends:    wotr-community-website
    hs-source-dirs:   test
    default-language: GHC2024
    type:             exitcode-stdio-1.0
