cabal-version: 3.4
name: wotr-community-website
version: 0.1.0.0
homepage: https://waroftheringcommunity.net
license: MIT
license-file: LICENSE
author: Bradley Sherman
maintainer: sirrus233@gmail.com
category: Web
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

common extensions
  ghc-options: -threaded
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    TypeData
    TypeFamilies
    UndecidableInstances

common dependencies
  build-depends:
    aeson ^>=2.2.3.0,
    amazonka ^>=2.0,
    amazonka-s3 ^>=2.0,
    base ^>=4.21.0.0,
    cassava ^>=0.5.3.2,
    cookie ^>=0.5.0,
    crypton ^>=1.0.1,
    directory ^>=1.3.9.0,
    esqueleto ^>=3.5.13.1,
    fast-logger ^>=3.2.5,
    filepath ^>=1.5.4.0,
    hedis ^>=0.15.2,
    http-conduit ^>=2.3.9.1,
    jose ^>=0.11,
    jose-jwt ^>=0.10.0,
    monad-logger ^>=0.3.40,
    persistent ^>=2.14.6.3,
    persistent-sqlite ^>=2.13.3.0,
    relude ^>=1.2.2.0,
    servant ^>=0.20.2,
    servant-multipart ^>=0.12.1,
    servant-server ^>=0.20.2,
    text ^>=2.1.2,
    time ^>=1.12.2,
    uuid ^>=1.3.16,
    validation ^>=1.1.3,
    vector ^>=0.13.2.0,
    wai ^>=3.2.4,
    wai-cors ^>=0.2.7,
    wai-extra ^>=3.1.17,
    warp ^>=3.4.7,
    warp-tls ^>=3.4.12,
    zip-archive ^>=0.4.3.2,

library
  import:
    warnings,
    extensions,
    dependencies

  exposed-modules:
    Api
    AppConfig
    AppServer
    Auth
    Database
    Logging
    Types.Api
    Types.Auth
    Types.DataField
    Types.Database
    Types.Migration
    Validation

  hs-source-dirs: src
  default-language: GHC2024

executable server
  import:
    warnings,
    extensions,
    dependencies

  main-is: Server.hs
  build-depends: wotr-community-website
  hs-source-dirs: app
  default-language: GHC2024

executable migration
  import:
    warnings,
    extensions,
    dependencies

  main-is: Migration.hs
  build-depends: wotr-community-website
  hs-source-dirs: app
  default-language: GHC2024

test-suite wotr-community-website-test
  import:
    warnings,
    extensions,
    dependencies

  main-is: Test.hs
  build-depends:
    hspec ^>=2.11.10,
    wotr-community-website,

  hs-source-dirs: test
  default-language: GHC2024
  type: exitcode-stdio-1.0
